--- a/assets/piano.css
+++ b/assets/piano.css
@@ -226,12 +226,15 @@
     text-align: center;
 }
 
+.position[interval-answer] {
+    background-color: rgba(255, 125, 125, 0.25);
+}
+
 .position[interval-answer]::before {
     content: attr(interval-answer);
     display: table-cell;
     vertical-align: bottom;
     transform: translateY(180px);
-    color: blue;
 }
 
 
