--- a/assets/piano.css
+++ b/assets/piano.css
@@ -36,16 +36,13 @@ body {
 }
 
 #piano-wrapper #piano-settings {
-    visibility: hidden;
-    max-height: 0;
-    text-align: right;
-    transition: max-height 100ms linear;
+    opacity: 0;
+    margin-bottom: 10px;
+    transition: opacity 500ms linear;
 }
 
 #piano-wrapper:hover #piano-settings {
-    visibility: visible;
-    max-height: 60px;
-    margin-bottom: 10px;
+    opacity: 1;
 }
 
 #piano {
@@ -279,10 +276,15 @@ body {
 
 #click-mode li {
     display: none;
+    transition: color ease-out linear;
 }
 
 #click-mode li.active {
     display: inline-block
+}
+
+#click-mode li:hover {
+    color: green;
 }
 
 
